# PolyAlpha

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  config.example.toml
config/: agent_sop.json  storage_backends.json  weather_locations.csv
config/account_types/: information_edge_wallet.json  stable_alpha_wallet.json  stat_arb_market_maker_bot.json  swing_trader.json
docs/: candidate_factors.json  factors.md  polyedge_architecture.md  research_sop.md
docs/market_categories/: news_information.md  (+4 more)
examples/: fills.csv
profiler/: profile_wallets.py  requirements-optional.txt  requirements.txt
scripts/: agent-research.sh  agent_research.py  build-release.sh  build_release.py  profile-wallet.sh  profile_wallet.py  research-user.sh  research_user.py  run-vps-stack.sh  run_vps_stack.py  runtime-env.sh  status.py  status.sh  stop-vps-stack.sh  stop_vps_stack.py  summary-loop.sh  summary_loop.py  watch-wallet-clob.sh  watch_wallet_clob.py
sql/: clickhouse_schema.sql  postgres_schema.sql  schema.sql
src/: backfill.rs  backfill_decode.rs  cli.rs  clob_features.rs  evm_rpc.rs  ingestion.rs  legacy_csv.rs  lib.rs  main.rs  metadata.rs  metrics.rs  model.rs  planned.rs  processes.rs  profile_config.rs  report.rs  storage.rs  storage_alerts.rs  storage_follow.rs  storage_logs.rs  storage_metrics.rs  storage_microstructure.rs  storage_profiler.rs  storage_research.rs  storage_settlement.rs  storage_strategy.rs  storage_types.rs  storage_wallet_intelligence.rs  storage_wallets.rs  storage_watchlist.rs  strategy_config.rs  tagging.rs
tests/: storage_test.rs
(+101 files in other folders)
